# CrisisLens_MumbaiHacks

./: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PHASE13_COMPLETE.md  PHASE14_COMPLETE.md  PHASE15_COMPLETE.md  PHASE16_COMPLETE.md  PHASE17_COMPLETE.md  PHASE18_COMPLETE.md  PHASE19_COMPLETE.md  PHASE20_COMPLETE.md  PHASE20_FINAL_COMPLETE.md  PHASE20_NEXTJS_COMPLETE.md  PHASE21_COMPLETE.md  PHASE21_QUICKSTART.md  PHASE22_COMPLETE.md  PHASE23_COMPLETE.md  PHASE24_COMPLETE.md  PHASE24_COMPLIANCE_COMPLETE.md  PHASE25_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  README.md  TESTING.md  config.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  verify_phase11.py  verify_phase2.py  verify_phase21.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_phase6.py  verify_phase7.py  verify_phase8.py  verify_phase9.py
agents/: base.py
agents/digestion/: base.py  burst_detection.py  claim_extraction.py  corroboration_scoring.py  entity_extraction.py  evidence_retrieval.py  factcheck_lookup.py  harm_assessment.py  invid_verification.py  keyframe_extraction.py  media_extraction.py  nli_veracity.py  novelty_scoring.py  ocr_agent.py  risk_scoring.py  (+3 more)
docker/: Dockerfile.api  Dockerfile.workers
docs/: API.md  DEPLOYMENT.md  USER_GUIDE.md  user-guide.md
k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  workers-deployment.yaml
models/: advisory.py  base.py  user.py
monitoring/: alerts.yml  prometheus.yml
schemas/: advisory.py  claim.py  item.py  notification.py
scripts/: deploy.sh  init_databases.py  init_roles.py  run_consumers.py  security_audit.py
services/: audit_service.py  clickhouse_service.py  compliance_audit.py  iceberg_service.py  kafka_consumer.py  kafka_producer.py  language_service.py  metrics.py  neo4j_service.py  normalization_service.py  notification_service.py  observability.py  opensearch_service.py  qdrant_service.py  redis_service.py  storage_service.py  tracing.py
terraform/: main.tf
tests/: conftest.py  load_test.py
workflows/: error_handler.py  executor.py  parallel_executor.py  state.py  state_manager.py  verification_workflow.py
(+124 files in other folders)
