[tool.poetry]
name = "crisis-lens"
version = "0.1.0"
description = "CrisisLens: Verification-first crisis intelligence system"
authors = ["CrisisLens Team"]
readme = "README.md"
neo4j = "^5.0"
sqlalchemy = "^2.0"
alembic = "^1.11"
celery = "^5.3"
spacy = "^3.6"
transformers = "^4.30"
torch = "^2.0"
numpy = "^1.24"
pandas = "^2.0"
python-multipart = "^0.0.6"
imagehash = "^4.3"
Pillow = "^10.0"
# Database clients
opensearch-py = "^2.3.0"
pyiceberg = {extras = ["pyarrow"], version = "^0.5.0"}
qdrant-client = "^1.7.0"
neo4j = "^5.14.0"
clickhouse-connect = "^0.6.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
# ML/AI Models
sentence-transformers = "^2.2.0"
bertopic = "^0.16.0"
transformers = "^4.35.0"
torch = "^2.1.0"
openai = "^1.3.0"
anthropic = "^0.7.0"
google-cloud-translate = "^3.12.0"
pytesseract = "^0.3.10"
whisper = {git = "https://github.com/openai/whisper.git"}
Pillow = "^10.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
authlib = "^1.3.0"
itsdangerous = "^2.1.2"
# Media Processing
ffmpeg-python = "^0.2.0"
Pillow-HEIF = "^0.13.0"
exifread = "^3.0.0"
pydub = "^0.25.1"
scenedetect = {extras = ["opencv"], version = "^0.6.0"}
pydub = "^0.25.1"
scenedetect = {extras = ["opencv"], version = "^0.6.0"}
opencv-python = "^4.8.0"
librosa = "^0.10.0"
ffmpeg-python = "^0.2.0"
torchvision = "^0.16.0"
facenet-pytorch = "^2.5.3"
tineye-api = "^1.0.0"
# Advanced NLP & Analytics
spacy-transformers = "^1.3.0"
neuralcoref = {git = "https://github.com/huggingface/neuralcoref.git"}
sutime = "^1.0.0"
geopandas = "^0.14.0"
networkx = "^3.2"
pyvis = "^0.3.2"
geopy = "^2.4.0"
vaderSentiment = "^3.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
